--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-background-color:rgb(255, 172, 71);
-color:blue;
+background-color:rgb(20, 114, 177);
+color:rgb(12, 59, 90);
 font-family: Consolas;
 }
